--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.26",
@@ -14,13 +14,13 @@
     "@types/recharts": "^1.8.9",
     "@types/styled-components": "^4.4.2",
     "@types/uuid": "^3.4.7",
-    "aws-amplify": "^1.3.3",
-    "axios": "^0.19.2",
+    "aws-amplify": "^4.3.4",
+    "axios": "^0.24.0",
     "immutability-helper": "^3.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^4.0.3",
     "recharts": "^1.8.5",
     "roboto-npm-webfont": "^1.0.1",
     "styled-components": "^5.0.1",
